half done Google Authentication

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGODB_URL = mongodb+srv://vidura:Ncomputing+123@itp.zjzmrby.mongodb.net/ITP-DB?retryWrites=true&w=majority
+GOOGLE_CLIENT_ID = 60868151076-oq33n4ukt38485ik6v2lr1dkoq5ft7nr.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+GOOGLE_REDIRECT_URL = http://localhost:8090/auth/google/callback
+SESSION_SECRET = ITPPROJECT
