--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "prettier": "^2.8.1"
   },
   "dependencies": {
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.8.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pino": "^8.8.0",
     "pino-pretty": "^9.1.1"
   }
